fix input and button wrapping in community section

--- a/SparcWeb/wwwroot/Styles/Global/_typography.scss
+++ b/SparcWeb/wwwroot/Styles/Global/_typography.scss
@@ -31,6 +31,11 @@
         font-family: 'NeueHaasDisplayRoman';
     }
 
+    button {
+        text-align: center;
+        line-height: 100%;
+    }
+
     .label, input, button {
         font-size: 16px;
     }
